fix: change dialog buttuns display to inline-flex for vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ hr {
 }
 
 .dialog .button {
-  display: inline-block;
+  display: inline-flex;
   width: 8em;
   height: 3em;
   font-size: inherit;
